landing page concluída (erro consertado)

--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ footer {
     margin-left: 8px;
 }
 
-.footer-copyright {
+.rodape-copyright {
     text-align: center;
     margin-top: 4rem;
     margin-bottom: 2rem;
